deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: weatherstation
  namespace: swh
  labels:
    app: weatherstation-api
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: weatherstation-api
  template:
    metadata:
      labels:
        app: weatherstation-api
    spec:
      containers:
      - name: swh-weatherstation-api
        image: joemay96/swh-weatherstation-api:latest
        ports: 
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: weatherstation-service
  namespace: swh
spec:
  selector:
    app: weatherstation-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: acv-api-ingress
# Wichtig für das Zertifikat wo der Ingress läuft
  namespace: swh
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`weatherstation.sharky.live`)
      kind: Rule
      services:
        - name: weatherstation-service
          port: 80
  tls:
    secretName: weatherstation-api-tls
